# research

./: .clineignore  .gitignore  .markdownlint-cli2.jsonc  README.md  amplify.yml  pyproject.toml
.claude/: CLAUDE.md  README.md  package-manager.json  settings.json  the-longform-guide.md  the-shortform-guide.md
.claude/.claude-plugin/: plugin.json
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  planner.md  python-build-resolver.md  python-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.claude/examples/: CLAUDE.md
.claude/rules/: backend.md  frontend.md  infra.md  research.md  security.md
.claude/scripts/: setup-package-manager.js
.claude/scripts/hooks/: check-console-log.js
.claude/scripts/lib/: package-manager.js
.claude/skills/checkpoint/: SKILL.md
.claude/skills/ci-fix/: SKILL.md  cicd-patterns.md
.claude/skills/code-review/: SKILL.md  frontend-patterns.md
.claude/skills/daily-add/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/e2e-fix/: SKILL.md
.claude/skills/eval-driven/: SKILL.md
.claude/skills/feature-plan/: SKILL.md
.claude/skills/instinct-evolve/: SKILL.md
.claude/skills/instinct-export/: SKILL.md
.claude/skills/instinct-import/: SKILL.md
.claude/skills/instinct-status/: SKILL.md
.claude/skills/learn/: SKILL.md  continuous-learning.md
.claude/skills/list/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/plan/: SKILL.md  orchestration-patterns.md
.claude/skills/playwright/: SKILL.md
.claude/skills/pr/: SKILL.md  git-workflow-patterns.md
.clinerules/: 00-command-restrictions.md  01-project-guidelines.md  02-security.md  03-coding-style-python.md
.clinerules/workflows/: pr.md  release.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: claude-auto-login.sh  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: commit-message.instructions.md  pull-request-description.instructions.md
.github/workflows/: auto-merge-daily.yml  build-push.yml  ci-backend.yml  ci-frontend.yml  ci-infra.yml
.obsidian/: graph.json  workspace.json
backend/: .coverage  .dockerignore  Dockerfile  pyproject.toml
backend/config/: research-config.yaml
backend/scripts/: daily_add.py  entrypoint.sh  test_pipeline_local.py
backend/src/: config.py  csv_manager.py  email_notifier.py  git_manager.py  github_auth.py  main.py  pr_creator.py  research_runner.py
backend/tests/: test_config.py  test_csv_manager.py  test_daily_add.py  test_email_notifier.py  test_git_manager.py  test_github_auth.py  test_pr_creator.py  test_research_runner.py
dev/: create-worktree  delete-worktree  deploy  format  lint  setup  start-frontend  sync-domain-links  test-backend  test-e2e  test-frontend
docs/coverage/: coverage.xml
docs/daily/: README.md
docs/data/: Software Usage Promotion Campaign Uplift Modeling  Uplift Modeling , Marketing Campaign Data
docs/develop/: experiments.md  inference.md  metrics.md  plot.md
docs/plans/: dynamodb-personal-notes.md
docs/research/: README.md  definitions.md  memo.md
frontend/: .gitignore  docs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: auth-state.ts  auth.setup.ts  domain.spec.ts  global-setup.ts  global-teardown.ts  header.spec.ts  home.spec.ts  login.spec.ts  mobile-toc.spec.ts  notes-panel.spec.ts  palette.spec.ts  report-detail.spec.ts  resizable-table.spec.ts  setup-fixtures.ts
frontend/scripts/: check-mermaid.mjs  setup-e2e-fixtures.mjs  sync-dynamodb.ts
frontend/src/: middleware.ts
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/scripts/: init-efs.sh  tfenv.sh
research/: README.md
(+1161 files in other folders)
